--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_ITandDataPrivacy.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_ITandDataPrivacy.yml
@@ -1,15 +1,36 @@
 ---
-code: |
-  # Ask user to describe their issue in their own words
-  EL_ProblemDescription
-  
-  # set this to true for the compiled answer template (to conditionally control content and format of the word template)
-  EL_ITandDataPrivacy = True
+question: Are you an IT business? 
+yesno: EL_IT_isITBusiness
 ---
-question: Please describe your problem
-subquestion: |
-  Please tell us a bit about your issue
+question: Does your matter regard seeking advice as an IT buisness?
 fields:
- - no label: EL_ProblemDescription
-   input type: area
+  - no label: EL_IT_adviceForBusiness
+    datatype: yesnoradio
+  - Please specify: EL_IT_adviceForBusinessDetails
+    input type: area
+    show if: EL_IT_adviceForBusiness
+---
+question: Are you doing business with an IT firm?
+yesno: EL_IT_withITFirm
+---
+question: Does your matter regard Data Privacy?
+yesno: EL_IT_dataPrivacyMatter
+---
+question: Does your matter concern any notifiable data breaches?
+fields:
+  - no label: EL_IT_isDataBreach
+    datatype: yesnoradio
+  - Please specify:  EL_IT_dataBreachDetails
+    input type: area
+    show if: EL_IT_isDataBreach
+---
+question: Are there any other relevant details? 
+subquestion: |
+  Is there anything else you would like us to be aware of regarding the matter?
+fields: 
+  - no label: EL_IT_moreDetailsProvided
+    datatype: yesnoradio
+  - Please specify:  EL_IT_moreDetails
+    input type: area
+    show if: EL_IT_moreDetailsProvided
 ---
