--- a/docassemble/LLAW33012022S1EZL1/data/questions/EL_PersonalInfo.yml
+++ b/docassemble/LLAW33012022S1EZL1/data/questions/EL_PersonalInfo.yml
@@ -2,42 +2,6 @@
 objects:
   - EL_User: Individual
 ---
-code: |
-  nav.set_section('personal')
-  ###
-  # gather personal information 
-  ###
-  
-  # NOTE 1: the variable `EL_legalProblemSectionQs` is used to store all questions for
-  ## which user provided an answer in this section. This is going to be useful later
-  ## when programmatically generating tabels for the review screen and the docx 
-  ## template. It means that when changing/adding questions only this variable needs to
-  ## be updated, instead of manually updating multiple files. 
-  EL_PersonalInfoSectionQs = []
-  
-  # add personal information to the list of asked questions - see NOTE 1
-  EL_PersonalInfoSectionQs.append({"question": "Name", "variable_name": "EL_User.name"})
-  EL_PersonalInfoSectionQs.append({"question": "Date of Birth", "variable_name": "EL_User.birthdate"})
-  EL_PersonalInfoSectionQs.append({"question": "Gender", "variable_name": "EL_User.gender"})
-  #EL_PersonalInfoSectionQs.append({"question": "Occupation", "variable_name": "EL_User.occupation"})
-  #EL_PersonalInfoSectionQs.append({"question": "Address", "variable_name": "EL_User.address"})
- 
-  EL_User.name.first
-  EL_User.name.last
-  EL_User.birthdate
-  EL_User.gender
-  EL_User.occupation
-  EL_User.address
-  
-  nav.set_section('contact')
-  # gather contact details
-  EL_User.email
-  EL_User.phone_number
-  EL_User.PreferredContact
-  
-  # the variable below is used to tell docassemble to run this file
-  EL_PersonalInfoContactDetailsSection = True
----
 question: Personal Information
 fields:
   - First Name: EL_User.name.first
@@ -55,6 +19,11 @@ fields:
 validation code: |
   EL_User.name.first = capitalize(EL_User.name.first)
   EL_User.name.last = capitalize(EL_User.name.last)
+script: |
+  <script>
+  $('#EL_NextBtn').text('Skip')
+  $('#daform').on('input', (e) => { if (e.target.value != '') {$('#EL_NextBtn').text('Next')}})
+  </script>
 ---
 question: Personal Information Cont.
 fields:
@@ -98,4 +67,6 @@ fields:
 validation code: |
   if not phone_number_is_valid(EL_User.phone_number, country='AU'):
     validation_error('Please enter a phone number valid for Australia.', field='EL_User.phone_number')
+  else:
+    EL_User.phone_number = phone_number_formatted(EL_User.phone_number, country='AU')
 ---  
